Второе занятие по JS. Создала основу для гамбургеров и функцию подсчета для магазина

--- a/lesson-1/cart.html
+++ b/lesson-1/cart.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <div class="wrapp">
-               <div class="goods-list"></div> 
+               <div class="cart-list"></div> 
             </div>
         </main>
         <footer class="header">
@@ -28,4 +28,3 @@
     </main>
 </body>
 </html>
-
