Третья домашка. НЕ получились методы класса Корзина

--- a/lesson-1/index.html
+++ b/lesson-1/index.html
@@ -19,12 +19,12 @@
         </header>
         <main>
             <div class="wrapp">
-               <div class="goods-list"></div> 
+               <div class="goods-list"></div>
             </div>
         </main>
-        <footer class="header">
-            <div class="header__wrapp wrapp"></div>
-        </footer>
+        <!-- <footer class="footer">
+            <div class="wrapp"></div>
+        </footer> -->
     </main>
 </body>
 </html>
